{
    "name": "PlayerInput 1",
    "maps": [
        {
            "name": "Player",
            "id": "7b116bf9-f4eb-4621-9c21-e4a22f8b3caa",
            "actions": [
                {
                    "name": "Run",
                    "type": "Value",
                    "id": "8b4359ec-8bf8-487c-9c17-67df5d804c98",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "92a0c001-ff2b-442c-b876-97f4e6f41321",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shot",
                    "type": "Button",
                    "id": "c64f917e-f18a-4ef1-a3d3-2481b99cdf87",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Wall Jump",
                    "type": "Button",
                    "id": "be95c585-b3b7-4126-a6c8-9a3a99374c38",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextBullet",
                    "type": "Value",
                    "id": "c027554f-d7a1-4934-8f07-2b650bd4081f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PreviosBullet",
                    "type": "Value",
                    "id": "cfc4f6ef-6b18-4ee3-883c-e5b1db133b82",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "56fac6c8-ebac-49f6-b152-7e8427890f19",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "down",
                    "id": "98f4b171-86b5-4c5d-b81c-2d4fcf621585",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ac12290e-466d-4845-b06f-f7596d65ea8e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0b59845b-2487-478e-a7b0-c100336184de",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0850a261-96a3-44d3-8d8f-935183195e5b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25f6d048-7b4e-43eb-8fdc-3d2acaf79dff",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Shot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed343d8c-058c-4a61-a75c-bdd32bb991b8",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Wall Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a028bea2-15e3-4f8c-a186-b1835e5ae472",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "NextBullet",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c611dcd5-079d-4b47-b897-28235d8c144e",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "PreviosBullet",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ThrowingHand",
            "id": "c3d1142f-456e-4cdf-a5af-be4239bce83c",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "86dda7d8-dd3f-4877-a080-c3d01b0a9bdd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Set Thow Direction",
                    "type": "PassThrough",
                    "id": "4da47e05-c324-4110-8e50-8eb206922dc5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "43d83b61-9bb1-46d3-a8c0-5ef3388650c0",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87d82182-99b8-4b11-9cb5-96fd7472f799",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Set Thow Direction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "8c07256c-3561-43c1-810d-adf752505159",
            "actions": [
                {
                    "name": "PauseButton",
                    "type": "Button",
                    "id": "0bd1b818-6757-458d-90dd-23f231404779",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8dbdb103-1e1e-4303-ae3a-99953aeb974c",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "PauseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Blaster",
            "id": "1065cfad-0d5d-4313-8148-3ed8023eeebb",
            "actions": [
                {
                    "name": "Set  Direction",
                    "type": "PassThrough",
                    "id": "26ea3913-b91e-45f6-b541-2275cbb2a10d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f9983ab3-8e86-4fd6-9da8-fbf8a360dfaa",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Set  Direction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse and Keyboard",
            "bindingGroup": "Mouse and Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Smartphone",
            "bindingGroup": "Smartphone",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<PressureSensor>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<StepCounter>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}